# rfam-production

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CWL-Dockerfile  Dockerfile  README.md  cwl-requirements.txt  entrypoint.sh  local.config.template  nextflow.config  pdb_clan_compete.nf  pdb_families.py  pdb_families.txt  pdb_full_region_table.py  pdb_mapping.nf  pdb_post_steps.nf  pdb_sync_db.nf  requirements.txt  send_notification.py  update_pdb_rel_db.py
genome-download/: README.md  pyproject.toml
genome-download/config/: rfam.conf.template
genome-download/rfamseq/: __main__.py  accession.py  converter.py  download.py  metadata.py  mgnify.py  missing.py  rsync.py  seqstat.py
genome-download/rfamseq/ncbi/: assembly_report.py  assembly_summary.py  utils.py
genome-download/rfamseq/uniprot/: __init__.py  proteome.py
genome-download/tests/: test_accession.py  test_missing.py  test_uniprot.py  test_wgs.py
genome-download/tests/data/: GCA_000411955.6_PG29_v5_assembly_report.txt  GCA_001963235.1_ViralProj361950_assembly_report.txt  GCF_000455745.1_ASM45574v1_assembly_report.txt  UP000000212.json  UP000000224.json  UP000000226.json  UP000000230.json  UP000000408.json  UP000001819.json  UP000006672.json  UP000006719.json  UP000007062.json  UP000007078.json  UP000008177.json  UP000012065.json  UP000019116.json  UP000035680.json  UP000035681.json  UP000093657.json  UP000177381.json  UP000177710.json  UP000192746.json  UP000214374.json  UP000214376.json  UP000214656.json  UP000214863.json  UP000662757.json  ids
genome-download/tests/ncbi/: test_ftp.py
release/: Dockerfile  Readme.md  main-vp.out  main.nf  nextflow.config  pyproject.toml  run.sh
release/apicuron/: bulk_upload.py  conf.py  extract_sheets_info.py  extract_svn_info.py
release/docs/: Release Procedure.md
release/generate_alignments/: main.nf
release/old/release-bin/: check_empty.sh  clan_file_generator.py  clanin_file_generator.py  create_release_note.py  database_file_selector.py  generate_3d_seed_file.py  generate_metadata_tables.py  generate_release_stats.py  generate_tax_data.py  genome_browser_hub_generator.py  genome_download_engine.py  load_cm_seed_in_db.py  populate_rfamlive_for_release.py  precompute_families.py  prepare_metadata_for_import.py  restore_mysqldump.py  rethreshold_family.py  rfamseq_generator.py  uniprot_file_converter.py  update_rnacentral_description.py  update_version_table.py
release/old/release-nf/: annotated_files.nf  apicuron.nf  generate_fasta_files.nf  generate_ftp_files.nf  nextflow.config  prepare_rfam_live.nf  stage_rfam_live.nf  trackhub.nf  update_text_search_dev.nf
release/old/release-nf/trackhub/: genomes.txt.mustache  hub.txt  trackDb.txt  (+1 more)
release/templates/: COPYING.template  README.template  USERMAN.template
release/workflows/: cm.nf  cms.nf  complete_clans.nf  database_export.nf  fasta_files.nf  rfam2go.nf  seeds.nf  templates.nf  trees.nf  view_processes.nf
release/workflows/3d_seed/: main.nf
release/workflows/apicuron/: apicuron.nf  main.nf
release/workflows/clainin/: main.nf
release/workflows/clan_competition/: main.nf
release/workflows/clanin/: main.nf
release/workflows/cm/: main.nf
release/workflows/ena_mapping/: main.nf
release/workflows/fasta/: main.nf
release/workflows/fasta_files/: main.nf  sequence-ids.sql
release/workflows/fetch_families/: main.nf
release/workflows/full_alignments/: main.nf
release/workflows/full_region/: main.nf
release/workflows/generate_alignments/: main.nf
release/workflows/load_cm_seed_in_db/: main.nf
release/workflows/pdb/: main.nf
release/workflows/prepare_rfam_live/: main.nf
release/workflows/rfam2go/: main.nf
release/workflows/rfam_seed/: main.nf
release/workflows/seed/: main.nf
release/workflows/stage_rfam_live/: main.nf
release/workflows/tree/: main.nf  tree.nf
release/workflows/update_stockholm_s3/: main.nf
release/workflows/update_text_search_dev/: main.nf
release/workflows/view_process/: main.nf
rfam-export/: .dockerignore  Dockerfile  main.nf  nextflow.config  pyproject.toml
rfam-export/rfam_export/: __main__.py  cached_mapping.py  context.py  families.py  full_region.py  genomes.py  xml.py
scripts/apicuron/: Dockerfile  apicuron_bulk.py  apicuron_conf.py  apicuron_conf_local.py  apicuron_single.py  bulk_report.json  bulk_upload.py  conf.py  extract_sheets_info.py  extract_svn_info.py  pyproject.toml  single_upload.py
scripts/genome_download/: .gitignore  Dockerfile  README.md  main.nf  ncbi-urls.txt  nextflow.config  pyproject.toml  run.sh  upi-to-skip
scripts/genome_download/config/: mgnify.json  rfam.conf.template
scripts/genome_download/rfamseq/: __main__.py  accession.py  download.py  easel.py  ena.py  fasta.py  fasta_filter.py  genome.py  metadata.py  missing.py  ncbi.py  rsync.py  seqstat.py  uniprot.py  utils.py  wget.py  wgs.py
scripts/genome_download/tests/: fasta_filter_test.py  ncbi.py  test_accession.py  test_ena.py  test_fasta_filter.py  test_metadata.py  test_ncbi.py  test_uniprot.py  test_wgs.py
scripts/rfblast/: Dockerfile  invalid.fa  pyproject.toml  rfblast.py
(+2249 files in other folders)
