[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rfam-production"
version = "0.1.0"
description = "Rfam production code"
authors = [
  { name="Blake Sweeney", email="bsweeney@ebi.ac.uk" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10.0"
dependencies = [
  'PyPika >= 0.48.9',
  'attrs >= 21.4.0',
  'biopython >= 1.83',
  'boltons >= 23.1.1',
  'cattrs >= 22.4.0',
  'click >= 8.1.3',
  'requests >= 2.27.1',
  'sqlitedict >= 2.0.0',
  'humanfriendly >= 10.0'
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
PyPika = ">=0.48.9"
attrs = ">=21.4.0"
biopython = ">=1.83"
boltons = ">=23.1.1"
cattrs = ">=22.4.0"
click = ">=8.1.3"
humanfriendly = ">= 10.0"
requests = ">=2.27.1"
sqlitedict = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = { version = "^7.1.2", python = ">= 3.7" }
black = { version = "^24.2.0", python = ">= 3.8" }
isort = { version = "^5.13.2", python = ">= 3.8" }

[tool.isort]
profile = "black"

[tool.pyright]
strict = "rfamseq/**"
