[tool.poetry]
name = "rfam-release-pipeline"
version = "0.1.0"
description = "The tooling to run Rfam's release pipeline."
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
