[tool.poetry]
name = "rfam-export"
version = "0.1.0"
description = "Code for build Rfam's XML exports"
authors = ["Blake Sweeney <bsweeney@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyMySQL = "^1.1.1"
click = "^8.1.7"
loguru = "^0.7.2"
attr = "^0.3.2"
cattrs = "^24.1.1"
sqlitedict = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pyright = "^1.1.380"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
