[tool.poetry]
name = "apicuron"
version = "0.1.0"
description = ""
authors = ["Emma Cooke <ecooke@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
