[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rfam-production"
version = "0.1.0"
description = "Rfam production code"
authors = [
  { name="Blake Sweeney", email="bsweeney@ebi.ac.uk" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10.0"
dependencies = [
  'requests >= 2.27.1',
  'click >= 8.1.3',
  'biopython >= 1.83',
  'sqlitedict >= 2.0.0',
  'attrs >= 21.4.0',
  'cattrs >= 22.4.0',
  'PyPika >= 0.48.9',
  'boltons >= 23.1.1',
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.27.1"
click = ">=8.1.3"
biopython = ">=1.83"
sqlitedict = ">=2.0.0"
attrs = ">=21.4.0"
cattrs = ">=22.4.0"
PyPika = ">=0.48.9"
boltons = ">=23.1.1"

[tool.poetry.group.dev.dependencies]
pytest = { version = "^7.1.2", python = ">= 3.7" }
black = { version = "^24.2.0", python = ">= 3.8" }
isort = { version = "^5.13.2", python = ">= 3.8" }

[tool.isort]
profile = "black"

[tool.pyright]
strict = "rfamseq/**"
